chỉnh sửa trang đăng ký/đăng nhập

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <a href="#" class="menu-item-link">Liên hệ</a>
                 </li>
                 <li class="menu-item">
-                    <a href="#" class="menu-item-link">Đăng nhập</a>
+                    <a href="auth_form.html" class="menu-item-link" id="btnDangnhap">Đăng nhập</a>
                 </li>
                 <label for="menu-checkbox" class="hide-menu-btn">
                     <i class="fas fa-times"></i>
@@ -131,7 +131,8 @@
         </footer>
     </section>
 
-    <script src="./asset/js/script_sanpham.js"></script>
-    <script src="./asset/js/index.js"></script>
+    <script src="./asset/js/script_product.js"></script>
+    <script src="./asset/js/index_loadproduct.js"></script>
+    <script src="./asset/js/index_control.js"></script>
 </body>
 </html>
