--- a/no_content.html
+++ b/no_content.html
@@ -46,7 +46,7 @@
         <nav class="navbar">
             <input type="checkbox" name="" id="menu-checkbox">
             <ul class="navbar__menu">
-                <li class="menu-item menu-item-active">
+                <li class="menu-item">
                     <a href="#" class="menu-item-link">Trang chủ</a>
                 </li>
                 <li class="menu-item">
