chức năng đăng nhập, đăng ký

--- a/auth_form.html
+++ b/auth_form.html
@@ -60,7 +60,7 @@
                     <a href="#" class="menu-item-link">Liên hệ</a>
                 </li>
                 <li class="menu-item menu-item-active">
-                    <a href="#" class="menu-item-link">Đăng nhập</a>
+                    <a href="auth_form.html" class="menu-item-link">Đăng nhập</a>
                 </li>
                 <label for="menu-checkbox" class="hide-menu-btn">
                     <i class="fas fa-times"></i>
@@ -77,12 +77,12 @@
                 <section class="auth__form">
                     <section class="form-control">
                         <label for="username">Tên đăng nhập</label>
-                        <input type="text" id="usernameS" placeholder="chaoanhhuy11">
+                        <input type="text" id="usernameL" placeholder="Nhập tên đăng nhập">
                         <small>Error message</small>
                     </section>
                     <section class="form-control">
                         <label for="password">Mật khẩu</label>
-                        <input type="password" id="passwordS" placeholder="Nhập mật khẩu">
+                        <input type="password" id="passwordL" placeholder="Nhập mật khẩu">
                         <small>Error message</small>
                     </section>
     
@@ -97,12 +97,12 @@
                 <section class="auth__form">
                     <section class="form-control">
                         <label for="username">Tên đăng nhập</label>
-                        <input type="text" id="username" placeholder="chaoanhhuy11">
+                        <input type="text" id="username" placeholder="Nhập tên đăng nhập">
                         <small>Error message</small>
                     </section>
                     <section class="form-control">
                         <label for="email">Email</label>
-                        <input type="text" id="email" placeholder="chaoanhhuy@gmail.com">
+                        <input type="text" id="email" placeholder="abcd@gmail.com">
                         <small>Error message</small>
                     </section>
                     <section class="form-control">
