chỉnh sửa hiển thị sản phẩm trang chủ, lưu thông tin đăng nhập vào sessionStorage

--- a/index.html
+++ b/index.html
@@ -59,8 +59,11 @@
                 <li class="menu-item">
                     <a href="#" class="menu-item-link">Liên hệ</a>
                 </li>
-                <li class="menu-item">
-                    <a href="auth_form.html" class="menu-item-link" id="btnDangnhap">Đăng nhập</a>
+                <li class="menu-item" id="btnDangnhap">
+                    <a href="auth_form.html" class="menu-item-link">Đăng nhập</a>
+                </li>
+                <li class="menu-item" id="btnProfile" style="display: none;">
+                    <a href="profile.html" class="menu-item-link">Trang cá nhân</a>
                 </li>
                 <label for="menu-checkbox" class="hide-menu-btn">
                     <i class="fas fa-times"></i>
@@ -134,5 +137,6 @@
     <script src="./asset/js/script_product.js"></script>
     <script src="./asset/js/index_loadproduct.js"></script>
     <script src="./asset/js/index_control.js"></script>
+    <script src="./asset/js/index_currentuser.js"></script>
 </body>
 </html>
