--- a/auth_form.html
+++ b/auth_form.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Đăng ký tài khoản</title>
+    <title>Đăng nhập/Đăng ký tài khoản</title>
     <link rel="stylesheet" href="./asset/fonts/fontawesome-free-5.15.1-web/css/all.css">
     <link rel="stylesheet" href="./asset/css/base.css">
     <link rel="stylesheet" href="./asset/css/header-nav.css">
