--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <!-- Search bar -->
                     <section class="header__search">
                         <section class="search-wrap">
-                            <input type="text" class="search-input" placeholder="Tìm kiếm sản phẩm">
+                            <input type="text" class="search-input" placeholder="Tìm kiếm...">
                             <button class="search-btn">
                                 <i class="search-btn-icon fas fa-search"></i>
                             </button>
@@ -34,7 +34,7 @@
                         <section class="cart-wrap">
                             <a href="#" class="cart-link">
                                 <i class="cart-icon fas fa-shopping-cart"></i>
-                                <small class="cart-notice">3</small>
+                                <small class="cart-notice">0</small>
                             </a>
                         </section>
                     </section>
@@ -77,8 +77,8 @@
                     <section class="item">
                         <h2>Best sellers</h2>
                         <small>Các sản phẩm bán chạy nhất</small>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, numquam aperiam at voluptates culpa et
-                            dignissimos cumque soluta dolores. Et qui quam eos officia quae. Error voluptates aliquid tempora quidem?</p>
+                        <p>Từ những mẫu máy tính xách tay "siêu di động" đến các cỗ máy chơi game hay dựng đồ họa ẩn chứa đầy sức mạnh, 
+                            dưới đây là các mẫu laptop đáng mua nhất của năm 2020, do chuyên trang công nghệ The Verge bình chọn.</p>
                     </section>
                 </section>
             </section>
