--- a/auth_cart.html
+++ b/auth_cart.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sản phẩm</title>
+    <title>Trang chủ</title>
     <link rel="stylesheet" href="./asset/fonts/fontawesome-free-5.15.1-web/css/all.css">
     <link rel="stylesheet" href="./asset/css/base.css">
     <link rel="stylesheet" href="./asset/css/header-nav.css">
-    <link rel="stylesheet" href="./asset/css/sanpham.css">
+    <link rel="stylesheet" href="./asset/css/index.css">
+    <link rel="stylesheet" href="./asset/css/auth_cart.css">
 </head>
+
 <body>
     <section class="page">
         <header class="header">
@@ -18,12 +21,12 @@
                     <section class="header__logo">
                         <a href="index.html" class="logo-link">Logo</a>
                     </section>
-        
+
                     <!-- Search bar -->
                     <section class="header__search">
                         <section class="search-wrap">
-                            <input type="text" class="search-input" placeholder="Tìm kiếm sản phẩm">
-                            <button class="search-btn">
+                            <input type="text" class="search-input"  id="searchProduct" placeholder="Tìm kiếm sản phẩm">
+                            <button class="search-btn" onclick="searchProduct()">
                                 <i class="search-btn-icon fas fa-search"></i>
                             </button>
                         </section>
@@ -31,7 +34,7 @@
         
                     <!-- Cart -->
                     <section class="header__cart">
-                        <section class="cart-wrap">
+                        <section class="cart-wrap menu-item-active">
                             <a href="auth_cart.html" class="cart-link">
                                 <i class="cart-icon fas fa-shopping-cart"></i>
                                 <small class="cart-notice">0</small>
@@ -50,7 +53,7 @@
                 <li class="menu-item">
                     <a href="index.html" class="menu-item-link">Trang chủ</a>
                 </li>
-                <li class="menu-item item-drop menu-item-active">
+                <li class="menu-item item-drop">
                     <a href="#" class="menu-item-link">Sản phẩm</a>
                     <ul class="menu-drop">
                         <a href="hang.html" id="Dell">Dell</a>
@@ -77,28 +80,51 @@
                 </label>
             </ul>
         </nav>
+        <section class="cart-product">
+            <div class="row">
+                <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12">
+                    <div class="content-product">
+                        <!--Xuất dữ liệu vào trong đây-->
+                    </div>
 
-        <section class="content">
-            <section class="grid grid1">
-                <!-- CSS từ đây đi nhé -->
-                <section class="content-wrap">
-                </section>
+                </div>
+                <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12" style="background-color: rgb(239, 239, 239);">
+                    <div class="row" style="margin-right: 55px; height: 30px;">
+                        <div class="col-xl-6 col-lg-6 col-md-6" style="padding-left: 15px;">
+                            Tạm tính
+                        </div>
+                        <div class="col-xl-6 col-lg-6 col-md-6" class="totalprice" id="totalprice">0 đ</div>
+                    </div>
+                    <hr>
+                    <div class="row" style="margin-right: 55px;    height: 30px;">
+                        <div class="col-xl-6 col-lg-6 col-md-6" style="padding-left: 15px;">
+                            Thành tiền
+                        </div>
+                        <div class="col-xl-6 col-lg-6 col-md-6" class="total" id="total">0 đ</div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+    </section>
+    <section class="content-body">
+
+    </section>
+
+    <footer class="footer">
+        <section class="grid">
+            <section class="footer-wrap">
+                <h3>© 2020 Tập đoàn Logo - Logo Group</h3>
+                <p>Địa chỉ: Hoàng Liệt - Hoàng Mai - Hà Nội</p>
+                <p>Điện thoại: 0986xxxxxx</p>
+                <p>Email: thudientu@logo.com.vn</p>
             </section>
         </section>
-
-        <footer class="footer">
-            <section class="grid">
-                <section class="footer-wrap">
-                    <h3>© 2020 Tập đoàn Logo - Logo Group</h3>
-                    <p>Địa chỉ: Hoàng Liệt - Hoàng Mai - Hà Nội</p>
-                    <p>Điện thoại: 0986xxxxxx</p>
-                    <p>Email: thudientu@logo.com.vn</p>
-                </section>
-            </section>
-        </footer>
+    </footer>
     </section>
     <script src="./asset/js/index_currentuser.js"></script>
-    <script src="./asset/js/sanpham.js"></script>
     <script src="./asset/js/index_control.js"></script>
+    <script src="./asset/js/index_loadcart.js"></script>
 </body>
+
 </html>
