--- a/lienhe.html
+++ b/lienhe.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sản phẩm</title>
+    <title>Gửi ý kiến phản hồi</title>
     <link rel="stylesheet" href="./asset/fonts/fontawesome-free-5.15.1-web/css/all.css">
     <link rel="stylesheet" href="./asset/css/base.css">
     <link rel="stylesheet" href="./asset/css/header-nav.css">
-    <link rel="stylesheet" href="./asset/css/sanpham.css">
+    <link rel="stylesheet" href="./asset/css/lienhe.css">
 </head>
 <body>
     <section class="page">
@@ -22,8 +22,8 @@
                     <!-- Search bar -->
                     <section class="header__search">
                         <section class="search-wrap">
-                            <input type="text" class="search-input" placeholder="Tìm kiếm sản phẩm">
-                            <button class="search-btn">
+                            <input type="text" class="search-input"  id="searchProduct" placeholder="Tìm kiếm sản phẩm">
+                            <button class="search-btn" onclick="searchProduct()">
                                 <i class="search-btn-icon fas fa-search"></i>
                             </button>
                         </section>
@@ -50,7 +50,7 @@
                 <li class="menu-item">
                     <a href="index.html" class="menu-item-link">Trang chủ</a>
                 </li>
-                <li class="menu-item item-drop menu-item-active">
+                <li class="menu-item item-drop">
                     <a href="#" class="menu-item-link">Sản phẩm</a>
                     <ul class="menu-drop">
                         <a href="hang.html" id="Dell">Dell</a>
@@ -60,7 +60,7 @@
                         <a href="hang.html" id="Lenovo">Lenovo</a>
                     </ul>
                 </li>
-                <li class="menu-item">
+                <li class="menu-item menu-item-active">
                     <a href="lienhe.html" class="menu-item-link">Liên hệ</a>
                 </li>
                 <li class="menu-item" id="btnProfile">
@@ -79,26 +79,46 @@
         </nav>
 
         <section class="content">
-            <section class="grid grid1">
-                <!-- CSS từ đây đi nhé -->
-                <section class="content-wrap">
+            <section class="auth">
+                <section class="auth__header">
+                    <h2 >Gửi ý kiến phản hồi</h2>
+                </section>
+                <section class="auth__form">
+                    <section class="form-control">
+                        <label for="username">Tên của bạn</label>
+                        <input type="text" id="usernameL" >
+                        <small>Error message</small>
+                    </section>
+                    <section class="form-control">
+                        <label for="Email">Email</label>
+                        <input type="email" id="Email" >
+                        <small>Error message</small>
+                    </section>
+                    <section class="form-control">
+                        <label for="Review">Ý kiến của bạn</label>
+                        <textarea name="Review" id="Review" cols="5"></textarea>
+                        <small>Error message</small>
+                    </section>
+                    <button class="auth_btn" id="btnLogin">Gửi phản hồi</button>
                 </section>
             </section>
         </section>
 
-        <footer class="footer">
-            <section class="grid">
-                <section class="footer-wrap">
-                    <h3>© 2020 Tập đoàn Logo - Logo Group</h3>
-                    <p>Địa chỉ: Hoàng Liệt - Hoàng Mai - Hà Nội</p>
-                    <p>Điện thoại: 0986xxxxxx</p>
-                    <p>Email: thudientu@logo.com.vn</p>
+            <footer class="footer">
+                <section class="grid">
+                    <section class="footer-wrap">
+                        <h3>© 2020 Tập đoàn Logo - Logo Group</h3>
+                        <p>Địa chỉ: Hoàng Liệt - Hoàng Mai - Hà Nội</p>
+                        <p>Điện thoại: 0986xxxxxx</p>
+                        <p>Email: thudientu@logo.com.vn</p>
+                    </section>
                 </section>
-            </section>
-        </footer>
+            </footer>
+        </section>
+
     </section>
+
     <script src="./asset/js/index_currentuser.js"></script>
-    <script src="./asset/js/sanpham.js"></script>
     <script src="./asset/js/index_control.js"></script>
 </body>
 </html>
